--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+.legend-text
+ font-size: medium
+ font-weight: bold
+ 
+.margin-1
+ margin: 0.5em
+ 
+.fieldset-bottom-margin
+ margin-bottom: 1em
+ 
+html
+ min-height: 100%
+
+body
+ min-height: 100vh
+ 
+.container
+ min-height: 100vh
+
+.navbar-bottom-margin
+ margin-bottom:2em
