--- a/src/styles.sass
+++ b/src/styles.sass
@@ -20,3 +20,10 @@ body
 
 .navbar-bottom-margin
  margin-bottom:2em
+ 
+.margin-left-1
+ margin-left:1em
+ 
+.post-date
+ font-size: small
+ color: grey
