--- a/src/app/blog-main/blog-main.component.html
+++ b/src/app/blog-main/blog-main.component.html
@@ -6,20 +6,26 @@
       <hr class="my-4">
       <p>Select a category to read from</p>
       <div ngbDropdown class="d-inline-block">
-        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>{{SelectedCategory.Title}}</button>
+        <button *ngIf = "AllCategories && !SelectedCategory" class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>All</button>
+        <button *ngIf = "AllCategories && SelectedCategory" class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>{{SelectedCategory.name}}</button>
         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button *ngFor="let category of AllCategories" ngbDropdownItem (click)="onSelect(category)">{{category.Title}}</button>
+          <button ngbDropdownItem (click)="onSelectAll()">All</button>
+          <button *ngFor="let category of AllCategories" ngbDropdownItem (click)="onSelect(category)">{{category.name}}</button>
         </div>
-        <a class="btn btn-outline-danger margin-left-1" routerLink="/new_post">+ Create a new resource</a>
       </div>
+
+<div class="margin-top-1">
+  <a class="btn btn-outline-danger" routerLink="/new_post">+ Create a new resource</a>
+  <a class="btn btn-outline-primary margin-left-1" routerLink="/categories">Manage Categories</a>
+</div>
+
     </div>
   </div>
 </div>
-
 <div *ngFor="let post of AllPosts" class=blog-thumbnail>
-  <h4>{{post.Title}}</h4>
-  <div class="post-date">{{AllMonths[post.Modified.getMonth()].toUpperCase() + ' ' + post.Modified.getDate() + ', '+post.Modified.getFullYear()}}</div>
-  <div class="blog-body-thumbnail" [innerHTML]="(post.Body | slice :0:300) + ' ...'"></div>
+  <h4>{{post.title}}</h4>
+  <div class="post-date">{{Helper.PrintDate(post.updated_at)}} | {{post.category.name}}</div>
+  <div class="blog-body-thumbnail" [innerHTML]="(post.body | slice :0:300) + ' ...'"></div>
   <a class="btn btn-outline-dark" routerLink="/post/{{post.id}}">Read More</a>
   <hr>
 </div>
