--- a/src/app/new-blog-post/new-blog-post.component.html
+++ b/src/app/new-blog-post/new-blog-post.component.html
@@ -1,19 +1,20 @@
 <form>
-    <div class="form-group">
+  <div class="form-group">
     <label for="CategoryInput">Category</label>
-    <select class="form-control" id="CategoryInput">
-      <option *ngFor="let category of AllCategories">{{category.Title}}</option>
+    <select class="form-control" id="CategoryInput" name="SelectedCategory" [(ngModel)] = "SelectedCategory"> 
+      <option [ngValue]="category" *ngFor="let category of AllCategories">{{category.name}}</option>
     </select>
   </div>
-            <div class="form-group">
-                <label for="InputTitle">Title</label>
-                    <input name="NewTitle" type="text" [(ngModel)] = "newBlogPost.Title" class="form-control" id="InputTitle" placeholder="Title">
-            </div>
+  <div class="form-group">
+    <label for="InputTitle">Title</label>
+    <input name="NewTitle" type="text" [(ngModel)]="newBlogPost.title" class="form-control" id="InputTitle"
+      placeholder="Title">
+  </div>
 
-            <div class="form-group">
-                <label for="InputBody">Content</label>
-                    <ckeditor name="NewBody" [editor]="Editor" [(ngModel)] = "newBlogPost.Body" data=" "></ckeditor>
-            </div>
-            
-            <button type="button" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+  <div class="form-group">
+    <label for="InputBody">Content</label>
+    <ckeditor name="NewBody" [editor]="Editor" [(ngModel)]="newBlogPost.body" data={{newBlogPost.body}}></ckeditor>
+  </div>
+
+  <button type="button" class="btn btn-primary" (click)="onSubmit()">Submit</button>
 </form>
