--- a/src/app/new-blog-post/new-blog-post.component.html
+++ b/src/app/new-blog-post/new-blog-post.component.html
@@ -1,14 +1,14 @@
-<form>
+<form ngNativeValidate>
   <div class="form-group">
     <label for="CategoryInput">Category</label>
-    <select class="form-control" id="CategoryInput" name="SelectedCategory" [(ngModel)] = "SelectedCategory"> 
+    <select class="form-control" id="CategoryInput" name="SelectedCategory" [(ngModel)] = "SelectedCategory" required>  
       <option [ngValue]="category" *ngFor="let category of AllCategories">{{category.name}}</option>
     </select>
   </div>
   <div class="form-group">
     <label for="InputTitle">Title</label>
     <input name="NewTitle" type="text" [(ngModel)]="newBlogPost.title" class="form-control" id="InputTitle"
-      placeholder="Title">
+      placeholder="Title" required>
   </div>
 
   <div class="form-group">
@@ -16,5 +16,5 @@
     <ckeditor name="NewBody" [editor]="Editor" [(ngModel)]="newBlogPost.body" data={{newBlogPost.body}}></ckeditor>
   </div>
 
-  <button type="button" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+  <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
 </form>
