Connecting to the backend

--- a/src/app/benefit-scenarios/benefit-scenarios.component.html
+++ b/src/app/benefit-scenarios/benefit-scenarios.component.html
@@ -12,8 +12,8 @@
   </thead>
   <tbody>
     <tr *ngFor="let scenario of benefitScenarios" (click)="onSelect(scenario)" [class.table-primary]="scenario === selectedScenario">
-      <td>{{scenario.StopWork}}</td>
-      <td>{{scenario.StartBenefit}}</td>
+      <td>{{scenario.StopWork.toISOString().substring(0,7)}}</td>
+      <td>{{scenario.StartBenefit.toISOString().substring(0,7)}}</td>
       <td>{{scenario.BenefitValue}}</td>
       <td>
         <button type="button" class="close" aria-label="Close" (click)="onDelete(scenario)">
