--- a/src/app/earnings/earnings.component.html
+++ b/src/app/earnings/earnings.component.html
@@ -2,18 +2,18 @@
   <legend class="w-auto legend-text">Earnings</legend>
  
  <div *ngFor="let earning of Earnings" class="form-group row">
-    <label for="InputName" class="col-sm-4 col-form-label">Age {{CurrentYear-YearOfBirth- (CurrentYear-earning.Year) }} ({{earning.Year}}) $ </label>
+    <label for="InputEarning" class="col-sm-4 col-form-label">Age {{CurrentYear-YearOfBirth- (CurrentYear-earning.Year) }} ({{earning.Year}}) $ </label>
     <div class="col-sm-6">
-      <input type="text" class="form-control" id="InputName" placeholder="Earning">
+      <input type="text" class="form-control" name = "InputEarning" id="InputEarning" placeholder="Earning" [(ngModel)] = "earning.Value" (input)="RemoveSelection(earning)">
     </div>
     <div class="col-sm-2 align-middle">
-      <input type="checkbox" class="form-check-input" id="Max">
+      <input type="checkbox" class="form-check-input" name= "EarningSelection" id="Max" (change)="ToggleMaximize(earning, $event)" [(ngModel)] = "earning.Selected">
       <label class="form-check-label" for="Max">Max</label>
     </div>
   </div>
   
   <div>
-    <button type="button" class="btn btn-outline-primary margin-1">Maximize</button>
-    <button type="button" class="btn btn-outline-dark margin-1">Clear</button>
+    <button type="button" class="btn btn-outline-primary margin-1" (click)="MaximizeAll()">Maximize</button>
+    <button type="button" class="btn btn-outline-dark margin-1" (click)="ClearAll()">Clear</button>
  </div>
  </fieldset>
