--- a/src/app/main-form/main-form.component.html
+++ b/src/app/main-form/main-form.component.html
@@ -2,10 +2,12 @@
 <div class="row">
     <div class="col-sm-6">
         <app-personal-details></app-personal-details>
-        <app-benefit-scenarios [benefitScenarios] = "benefitScenarios"></app-benefit-scenarios>
+        <app-benefit-scenarios></app-benefit-scenarios>
     </div>
      <div class="col-sm-6">
+         <div class="overflow-auto earnings-box"> 
          <app-earnings></app-earnings>
+         </div>
     </div>
 </div>
 </form>
