--- a/src/styles.sass
+++ b/src/styles.sass
@@ -30,3 +30,9 @@ body
 .post-date
  font-size: small
  color: grey
+
+.earnings-box
+ width:100% 
+ height:90vh
+ padding-right:1em
+ padding-left:1em
