--- a/src/app/blog-main/blog-main.component.html
+++ b/src/app/blog-main/blog-main.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+<div class="container">
 <div class="row">
   <div class="col">
     <div class="jumbotron">
@@ -28,4 +30,5 @@
   <div class="blog-body-thumbnail" [innerHTML]="(post.body | slice :0:300) + ' ...'"></div>
   <a class="btn btn-outline-dark" routerLink="/post/{{post.id}}">Read More</a>
   <hr>
+</div>
 </div>
