--- a/src/app/main-form/main-form.component.html
+++ b/src/app/main-form/main-form.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+<div class="container">
 <form>
 <div class="row">
     <div class="col-sm-6">
@@ -5,10 +7,8 @@
         <app-benefit-scenarios></app-benefit-scenarios>
     </div>
      <div class="col-sm-6">
-         <div class="overflow-auto earnings-box"> 
          <app-earnings></app-earnings>
-         </div>
     </div>
 </div>
 </form>
-
+</div>
