--- a/src/styles.sass
+++ b/src/styles.sass
@@ -33,6 +33,28 @@ body
 
 .earnings-box
  width:100% 
- height:90vh
+ max-height:80vh
  padding-right:1em
  padding-left:1em
+
+.full-height
+ height: 100vh
+
+.bg-black
+ background-color: black
+
+.bg-white
+ background-color: white
+
+.height-20
+ height: 20%
+
+.text-white
+ color: white
+
+.text-black
+ color: black
+
+.resize-50
+ max-width: 50%
+ max-height: 50%
