--- a/src/app/Categories/categories-main/categories-main.component.html
+++ b/src/app/Categories/categories-main/categories-main.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+<div class="container">
 <div class="row">
     <div class="col">
             <h1>Manage Categories</h1>
@@ -32,5 +34,5 @@
             <button class="btn btn-dark" (click)="Done()">Done</button>
     </div>
 </div>
-      
+</div>      
 
