--- a/src/app/blog-post-details/blog-post-details.component.html
+++ b/src/app/blog-post-details/blog-post-details.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+<div class="container">
 <div *ngIf = "blogPost">
 <div class="row">
   <div class="col">
@@ -18,5 +20,6 @@
       </div>
       
       </div>
+</div>
 </div>
 </div>
