--- a/src/app/new-blog-post/new-blog-post.component.html
+++ b/src/app/new-blog-post/new-blog-post.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+<div class="container">
 <form ngNativeValidate>
   <div class="form-group">
     <label for="CategoryInput">Category</label>
@@ -18,3 +20,4 @@
 
   <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
 </form>
+</div>
