--- a/src/styles.sass
+++ b/src/styles.sass
@@ -58,3 +58,42 @@ body
 .resize-50
  max-width: 50%
  max-height: 50%
+
+.no-padding
+ padding-left: 0
+ padding-right: 0
+
+.main-box
+ padding: 2em
+ padding-bottom: 7em 
+
+.background-green
+ background-color: #142427
+
+.background-green-light
+ background-color: #427872
+
+.landing-box-white
+ background-color: white
+ color: #142427
+ width:30em
+ padding: 3em
+ font: normal normal normal 15px/1.875em raleway,sans-serif
+ position: relative
+ margin-left:-5em
+ margin-top:0em
+ top:0
+ left:0
+
+.landing-bottom
+ color: #142427
+ margin-top: 5em
+ margin-bottom: 5em
+ margin-left: 10em
+ margin-right: 10em
+ font: normal normal normal 16px/1.875em raleway,sans-serif
+
+.footer
+ margin-left: 10em
+ margin-right: 10em
+ font: normal normal normal 16px/1.875em raleway,sans-serif
