--- a/src/app/earnings/earnings.component.html
+++ b/src/app/earnings/earnings.component.html
@@ -9,14 +9,18 @@
       <input type="text" class="form-control" name = "InputEarning" id="InputEarning" placeholder="Earning" [(ngModel)] = "earning.Value" (input)="RemoveSelection(earning)">
     </div>
     <div class="col-sm-2 align-middle">
-      <input type="checkbox" class="form-check-input" name= "EarningSelection" id="Max" (change)="ToggleMaximize(earning, $event)" [(ngModel)] = "earning.Selected">
-      <label class="form-check-label" for="Max">Max</label>
+      <input type="checkbox" class="form-check-input" name= "EarningSelection" id="Max" (change)="ToggleMaximize(earning, $event)" [(ngModel)] = "earning.Selected" [disabled]="loadingMaxYearResponse && toggledYear === earning.Year">
+      <span *ngIf="loadingMaxYearResponse && toggledYear === earning.Year" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+      <label *ngIf="!(loadingMaxYearResponse && toggledYear === earning.Year)" class="form-check-label" for="Max">Max</label>
     </div>
   </div>
   </div>
   
   <div>
-    <button type="button" class="btn btn-outline-primary margin-1" (click)="MaximizeAll()">Maximize</button>
+    <button type="button" class="btn btn-outline-primary margin-1" (click)="MaximizeAll()" [disabled]="loadingMaxAllResponse || YearOfBirth === undefined">
+        <span *ngIf="loadingMaxAllResponse" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+      Maximize
+    </button>
     <button type="button" class="btn btn-outline-dark margin-1" (click)="ClearAll()">Clear</button>
  </div>
  </fieldset>
