--- a/src/app/landing/landing/landing.component.html
+++ b/src/app/landing/landing/landing.component.html
@@ -10,7 +10,7 @@
                                 <td class="align-bottom">
                                         <ul class="nav justify-content-end">
                                                 <li class="nav-item">
-                                                  <a class="nav-link text-black" href="#">About</a>
+                                                  <a class="nav-link text-black" routerLink="/main">Calculator</a>
                                                 </li>
                                                 <li *ngIf="!auth.isLoggedIn()" class="nav-item">
                                                   <a class="nav-link text-black" routerLink="/register">Sign Up</a>
