adding changes for disability periods and children

--- a/src/app/main-form/main-form.component.html
+++ b/src/app/main-form/main-form.component.html
@@ -5,6 +5,8 @@
     <div class="col-sm-6">
         <app-personal-details></app-personal-details>
         <app-benefit-scenarios></app-benefit-scenarios>
+        <app-child-benefit-periods></app-child-benefit-periods>
+        <app-disability-periods></app-disability-periods>
     </div>
      <div class="col-sm-6">
          <app-earnings></app-earnings>
