--- a/src/app/benefit-scenarios/benefit-scenarios.component.html
+++ b/src/app/benefit-scenarios/benefit-scenarios.component.html
@@ -24,7 +24,8 @@
   </tbody>
 </table>
 <div>
-    <button type="button" class="btn btn-outline-primary margin-1" (click)="openModal()" [disabled]="Profile.Earnings.length === 0">Add</button>
+    <button type="button" class="btn btn-outline-primary margin-1" (click)="openModal()" 
+    [disabled]="!IsValidDateOfBirth || Profile.Earnings.length === 0">Add</button>
     <button type="button" class="btn btn-outline-dark margin-1" (click)="Clear()">Clear</button>
  </div>
  </fieldset>
