--- a/src/app/landing/landing/landing.component.html
+++ b/src/app/landing/landing/landing.component.html
@@ -9,6 +9,9 @@
                           <tr>
                                 <td class="align-bottom">
                                         <ul class="nav justify-content-end">
+                                            <li *ngIf="isAdmin" class="nav-item">
+                                                <a class="nav-link text-black" routerLink="/admin">Admin</a>
+                                              </li>
                                                 <li class="nav-item">
                                                   <a class="nav-link text-black" routerLink="/main">Calculator</a>
                                                 </li>
