--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,6 +3,9 @@
       <a class="navbar-brand" href="/landing">CPPEstimator</a>
       
         <ul class="nav">
+            <li *ngIf="isAdmin" class="nav-item active">
+                <a class="nav-link text-white" href="/admin">Admin</a>
+              </li>
           <li class="nav-item active">
             <a class="nav-link text-white" href="/blog">Blog <span class="sr-only">(current)</span></a>
           </li>
