adding the report

--- a/src/app/main-form/main-form.component.html
+++ b/src/app/main-form/main-form.component.html
@@ -12,5 +12,11 @@
          <app-earnings></app-earnings>
     </div>
 </div>
+<div class="row">
+    <div class="col-sm-12">
+        <button (click)="generateFullReport()" class = "btn btn-primary">Generate Full Report</button>
+        <br/><br/>
+    </div>
+</div>
 </form>
 </div>
