adding reset password functionality

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -3,18 +3,16 @@
     <div class="login-box jumbotron">
         <img src="assets/img/Logo3.jpg" style="max-width:50%"/>
       <hr>
-        <form #registerForm = "ngForm" (ngSubmit)="login(registerForm)">
+        <form #resetForm = "ngForm" (ngSubmit)="reset(resetForm)" *ngIf="!resetSuccessful">
         <div *ngIf="errorMessage != ''" class="alert alert-danger">
           {{errorMessage}}
         </div>
-
-        <div class="alert alert-info" role="alert" *ngIf="reset_password"> 
-          Please sign in with your new credentials
-          </div>
-      
+        <div class="alert alert-info" role="alert">
+        It happens. Enter your email address below and we will send you a password reset link
+        </div>
       <div class="form-group">
         <input type="email" name="email" class="form-control form-control-lg" id="exampleInputEmail1" 
-        aria-describedby="emailHelp" [(ngModel)]="credentials.email" placeholder="Enter email" required email #email="ngModel">
+        aria-describedby="emailHelp" [(ngModel)]="targetEmail" placeholder="Enter email" required email #email="ngModel">
         <div *ngIf="email.invalid && (email.dirty || email.touched)"
         class="alert alert-danger">
     
@@ -26,29 +24,19 @@
         </div>
       </div>
       </div>
-    
-      
-      <div class="form-group">
-        <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password"
-        name = "password" [(ngModel)]="credentials.password" required #password="ngModel">
-        <div *ngIf="password.invalid && (password.dirty || password.touched)"
-        class="alert alert-danger">
-    
-        <div *ngIf="password.errors.required">
-          Password is required
-        </div>
-      </div>
-      </div>
       
       <button type="submit" class="btn btn-primary btn-lg" [disabled]="loadingResponse">
           <span *ngIf="loadingResponse" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-        Login
+        Send me a Link
       </button>
+      <br><br>
+    Remembered your password? <a routerLink="/login">Login!</a>
     </form>
-    <br>
-    New to My Canada Pension Plan? <a routerLink="/register">Sign Up!</a>
-    <br>
-    <small><a [routerLink]="['/forgot_password']">Forgot your password?</a></small>
+
+    <div *ngIf="resetSuccessful" class="alert alert-info" role="alert">
+        Great, now please check your email and follow the instructions.
+    </div>
+    
   </div>
     </div>
     </div>
