--- a/src/styles.sass
+++ b/src/styles.sass
@@ -97,3 +97,10 @@ body
  margin-left: 10em
  margin-right: 10em
  font: normal normal normal 16px/1.875em raleway,sans-serif
+
+.btn-margin-1
+  margin-right:1em
+
+.has-error
+  border:1px solid red
+  color:red
