--- a/src/app/personal-details/personal-details.component.html
+++ b/src/app/personal-details/personal-details.component.html
@@ -1,17 +1,20 @@
  <fieldset class="border p-2 fieldset-bottom-margin">
   <legend class="w-auto legend-text">Personal Details</legend>
+
+  <form name="form" #form="ngForm">
  
  <div class="form-group row">
     <label for="InputName" class="col-sm-3 col-form-label">Name</label>
     <div class="col-sm-9">
-      <input type="text" class="form-control" id="InputName" placeholder="Name">
+      <input name="name" type="text" class="form-control" id="InputName" placeholder="Name" [(ngModel)]="Name" #name="ngModel">
     </div>
   </div>
   
   <div class="form-group row">
     <label for="InputBirth" class="col-sm-3 col-form-label">Date of Birth</label>
     <div class="col-sm-9">
-      <input type="text" [(ngModel)]="DateOfBirth" class="form-control" id="InputBirth" placeholder="(YYYY-MM)" (input)="onTextChange($event.target.value)">
+      <input type="text" name="DOB" [(ngModel)]="DateOfBirth" class="form-control" id="InputBirth" placeholder="(YYYY-MM)" (input)="onTextChange()" #DOB="ngModel">
     </div>
   </div>
+  </form>
  </fieldset>
