removing duplicate records bug

--- a/src/app/personal-details/personal-details.component.html
+++ b/src/app/personal-details/personal-details.component.html
@@ -6,7 +6,8 @@
  <div class="form-group row">
     <label for="InputName" class="col-sm-3 col-form-label">Name</label>
     <div class="col-sm-9">
-      <input name="name" type="text" class="form-control" id="InputName" placeholder="Name" [(ngModel)]="Name" #name="ngModel">
+      <input name="name" type="text" class="form-control" id="InputName" 
+      placeholder="Name" [(ngModel)]="Profile.Name" #name="ngModel">
     </div>
   </div>
   
