--- a/src/app/Modals/new-child-benefit/new-child-benefit.component.html
+++ b/src/app/Modals/new-child-benefit/new-child-benefit.component.html
@@ -32,29 +32,31 @@
           <div class="col-sm-1"></div>
            <label for="ChildBirthDate" class="col-sm-5 col-form-label">Birthday (YYYY-MM):</label>
           <div class="col-sm-6">
-              <input type="text" [(ngModel)] = "NewChild.BirthDate" 
+              <!-- <input type="text" [(ngModel)] = "NewChild.BirthDate" 
               pattern="[0-9]{4}-([0][0-9]|[1][0-2])" class="form-control" name="BirthDateInput" 
               id="BirthDateInput" aria-describedby="BirthDateInputHelp" placeholder="YYYY-MM"
-              [disabled] = "ChildInputType === 'PartialMode'">
+              [disabled] = "ChildInputType === 'PartialMode'"> -->
+              <month-date-picker 
+              [disabled]="ChildInputType === 'PartialMode'"
+              (dateSelected)="onBirthDateSelected($event)"></month-date-picker>
           </div>
         </div>
+
+       
 
         <div class="form-group row">
             <div class="col-sm-1"></div>
              <label for="ChildAdoptionDate" class="col-sm-5 col-form-label">Adoption (YYYY-MM):</label>
             <div class="col-sm-6">
-                <input type="text" [(ngModel)] = "NewChild.AdoptionDate" 
+                <!-- <input type="text" [(ngModel)] = "NewChild.AdoptionDate" 
         pattern="[0-9]{4}-([0][0-9]|[1][0-2])" class="form-control" name="AdotpionDateInput" 
         id="AdotpionDateInput" aria-describedby="AdotpionDateInputHelp" placeholder="YYYY-MM (Optional)"
-        [disabled] = "ChildInputType === 'PartialMode'">
+        [disabled] = "ChildInputType === 'PartialMode'"> -->
+        <month-date-picker 
+              [disabled]="ChildInputType === 'PartialMode'"
+              (dateSelected)="onAdoptionDateSelected($event)"></month-date-picker>
             </div>
           </div>
-
-
-       
-      
-      
-     
 
           <div class="form-group row">
               <div class="col-sm-12">
@@ -83,7 +85,7 @@
                 <div class="col-sm-1"></div>
                  <label for="BenefitPartialStart" class="col-sm-5 col-form-label">Benefit start (YYYY-MM):</label>
                 <div class="col-sm-6">
-                    <input type="text" [(ngModel)] = "NewChild.BirthDate" 
+                    <input type="text" [ngModel] = "NewChild.BirthDate | date:'yyyy-MM'" 
                     pattern="[0-9]{4}-([0][0-9]|[1][0-2])" class="form-control" name="BenefitPartialStart" 
                     id="BenefitPartialStart" aria-describedby="BenefitPartialStartHelp" placeholder="YYYY-MM"
                     [disabled] = "ChildInputType === 'FullMode'">
@@ -94,7 +96,7 @@
                   <div class="col-sm-1"></div>
                    <label for="BenefitPartialEnd" class="col-sm-5 col-form-label">Benefit end (YYYY-MM):</label>
                   <div class="col-sm-6">
-                      <input type="text" [(ngModel)] = "NewChild.AdoptionDate" 
+                      <input type="text" [ngModel] = "NewChild.AdoptionDate | date:'yyyy-MM'" 
               pattern="[0-9]{4}-([0][0-9]|[1][0-2])" class="form-control" name="BenefitPartialEnd" 
               id="BenefitPartialEnd" aria-describedby="BenefitPartialEndHelp" placeholder="YYYY-MM"
               [disabled] = "ChildInputType === 'FullMode'">
