--- a/src/app/Modals/new-disability-period/new-disability-period.component.html
+++ b/src/app/Modals/new-disability-period/new-disability-period.component.html
@@ -8,15 +8,19 @@
     <form>
       <div class="form-group">
         <label for="StartDisabilityPeriod">Disability Start (YYYY-MM):</label>
-        <input type="text" [(ngModel)] = "NewDisabilityPeriod.StartDisability" 
+        <!-- <input type="text" [(ngModel)] = "NewDisabilityPeriod.StartDisability" 
         pattern="[0-9]{4}-([0][0-9]|[1][0-2])" class="form-control" name="StartDisabilityInput" 
-        id="StartDisabilityInput" aria-describedby="StartDisabilityInputHelp" placeholder="YYYY-MM">
+        id="StartDisabilityInput" aria-describedby="StartDisabilityInputHelp" placeholder="YYYY-MM"> -->
+        <month-date-picker 
+              (dateSelected)="onDisabilityStartSelected($event)"></month-date-picker>
       </div>
       <div class="form-group">
         <label for="EndDisabilityPeriod">Disability End (YYYY-MM):</label>
-        <input type="text" [(ngModel)] = "NewDisabilityPeriod.EndDisability" 
+        <!-- <input type="text" [(ngModel)] = "NewDisabilityPeriod.EndDisability" 
         pattern="[0-9]{4}-([0][0-9]|[1][0-2])" class="form-control" name="EndDisabilityInput" 
-        id="EndDisabilityInput" aria-describedby="EndDisabilityInputHelp" placeholder="YYYY-MM">
+        id="EndDisabilityInput" aria-describedby="EndDisabilityInputHelp" placeholder="YYYY-MM"> -->
+        <month-date-picker 
+              (dateSelected)="onDisabilityEndSelected($event)"></month-date-picker>
       </div>
           </form>
   </div>
