--- a/src/app/earnings/earnings.component.html
+++ b/src/app/earnings/earnings.component.html
@@ -3,13 +3,13 @@
  
   <div class="overflow-auto earnings-box"> 
 
- <div *ngFor="let earning of Profile.Earnings" class="form-group row">
+ <div *ngFor="let earning of Profile.Earnings; let i = index" class="form-group row">
     <label for="InputEarning" class="col-sm-4 col-form-label">Age {{CurrentYear-YearOfBirth- (CurrentYear-earning.Year) }} ({{earning.Year}}) $ </label>
     <div class="col-sm-6">
-      <input type="text" class="form-control" name = "InputEarning" id="InputEarning" placeholder="Earning" [(ngModel)] = "earning.Value" (input)="RemoveSelection(earning)" (change)="onEarningChange()">
+      <input type="text" class="form-control" name = "InputEarning" id="InputEarning-{{i}}" placeholder="Earning" [(ngModel)] = "earning.Value" (input)="RemoveSelection(earning)" (change)="onEarningChange()">
     </div>
     <div class="col-sm-2 align-middle">
-      <input type="checkbox" class="form-check-input" name= "EarningSelection" id="Max" (change)="ToggleMaximize(earning, $event)" [(ngModel)] = "earning.Selected" [disabled]="loadingMaxYearResponse && toggledYear === earning.Year">
+      <input type="checkbox" class="form-check-input" name= "EarningSelection" id="Max-{{i}}" (change)="ToggleMaximize(earning, $event)" [(ngModel)] = "earning.Selected" [disabled]="loadingMaxYearResponse && toggledYear === earning.Year">
       <span *ngIf="loadingMaxYearResponse && toggledYear === earning.Year" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
       <label *ngIf="!(loadingMaxYearResponse && toggledYear === earning.Year)" class="form-check-label" for="Max">Max</label>
     </div>
