--- a/src/app/landing/landing/landing.component.html
+++ b/src/app/landing/landing/landing.component.html
@@ -9,8 +9,11 @@
                           <tr>
                                 <td class="align-bottom">
                                         <ul class="nav justify-content-end">
-                                            <li *ngIf="isAdmin" class="nav-item">
+                                            <li *ngIf="auth.isAdmin()" class="nav-item">
                                                 <a class="nav-link text-black" routerLink="/admin">Admin</a>
+                                              </li>
+                                              <li class="nav-item">
+                                                <a class="nav-link text-black" routerLink="/blog">Blog</a>
                                               </li>
                                                 <li class="nav-item">
                                                   <a class="nav-link text-black" routerLink="/main">Calculator</a>
